--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,60 @@
 .intro {
-  background-color: lightpink;
+  background-color: white;
+  display: flex;
+
+  .left {
+    flex: 0.5;
+
+    .imgContainer {
+      width: 700px;
+      height: 700px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      float: left;
+
+      img {
+        height: 100%;
+      }
+    }
+  }
+  .right {
+    flex: 0.5;
+
+    .wrapper {
+      width: 100%;
+      height: 100%;
+      padding-left: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      h1 {
+        font-size: 60px;
+        margin: 10px 0;
+      }
+      h2 {
+        font-size: 35px;
+      }
+      h3 {
+        font-size: 30px;
+      }
+    }
+    a {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+
+      img {
+        width: 60px;
+        animation: arrowBlink 2s infinite;
+      }
+      @keyframes arrowBlink {
+        100% {
+          opacity: 0;
+        }
+      }
+    }
+  }
 }
