--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -37,8 +37,10 @@
       h2 {
         font-size: 35px;
       }
-      h3 {
-        font-size: 30px;
+
+      span {
+        font-size: 25px;
+        color: aqua;
       }
     }
     a {
