--- a/src/components/Topbar/topbar.scss
+++ b/src/components/Topbar/topbar.scss
@@ -33,8 +33,10 @@
         align-items: center;
         margin-left: 30px;
 
-        .icon {
+        img {
+          height: 50%;
           font-size: 18px;
+          color: aquamarine;
         }
 
         span {
