i think this is a good stopping point and something that i can make really great in the future

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -28,6 +28,7 @@
   }
   .right {
     flex: 0.5;
+    overflow: hidden;
 
     .wrapper {
       width: 100%;
@@ -43,6 +44,9 @@
       }
       h2 {
         font-size: 35px;
+      }
+      h3 {
+        font-size: 25px;
       }
 
       span {
