--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -30,6 +30,10 @@
     flex: 0.5;
     overflow: hidden;
 
+    h3 {
+      margin: 10px 0;
+    }
+
     .wrapper {
       width: 100%;
       height: 100%;
@@ -46,6 +50,7 @@
         font-size: 35px;
       }
       h3 {
+        margin: 10px 0;
         font-size: 25px;
       }
 
